flux-modules/extras/wireguard/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wireguard
  labels:
    app: wireguard
spec:
  selector:
    matchLabels:
      app: wireguard
  template:
    metadata:
      labels:
        app: wireguard
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      nodeSelector:
        kubernetes.io/os: linux
      volumes:
        - name: mods
          hostPath:
            path: /lib/modules
            type: Directory
        - name: wireguard-confs
          persistentVolumeClaim:
            claimName: wireguard-confs
        - name: server-init-template
          configMap:
            name: server-init-template
      containers:
        - name: wireguard
          image: linuxserver/wireguard:v1.0.20210914-ls22
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: wireguard-confs
              mountPath: /config
            - name: server-init-template
              mountPath: "/defaults/server.conf"
              readOnly: true
              subPath: server.conf
          ports:
            - containerPort: 51820
              protocol: UDP
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 64Mi
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
